JUnit test for setup where split package becomes child of plain package
This test represents a combination of explicit and auto modules with
shared package prefixes which triggers the compiler to add a
SplitPackageBinding as child of a PlainPackageBinding which should never
happen.

Signed-off-by: Paul Pazderski <paul-eclipse@ppazderski.de>